--- a/index.html
+++ b/index.html
@@ -42,6 +42,25 @@
         100% { box-shadow: 0 0 0 0 rgba(6, 182, 212, 0); }
       }
       .active-pulse { animation: pulse-cyan 2s infinite; }
+
+      /* Efeito de pulso para MACRO selecionado */
+      @keyframes macro-glow-pulse {
+        0% { 
+          border-color: rgba(6, 182, 212, 0.4); 
+          background-color: rgba(6, 182, 212, 0.1);
+        }
+        50% { 
+          border-color: rgba(6, 182, 212, 1); 
+          background-color: rgba(6, 182, 212, 0.3);
+        }
+        100% { 
+          border-color: rgba(6, 182, 212, 0.4); 
+          background-color: rgba(6, 182, 212, 0.1);
+        }
+      }
+      .macro-pulse-active {
+        animation: macro-glow-pulse 1.5s infinite ease-in-out;
+      }
     </style>
   <script type="importmap">
 {
